reduced margin for logos, fixed spacing issues

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -33,19 +33,19 @@ html {
 }
 
 .rotate {
-  -webkit-transition:all 0.5s ease-out;
-  -moz-transition:all 0.5s ease-out;
-  -ms-transition:all 0.5s ease-out;
-  -o-transition:all 0.5s ease-out;
-  transition:all 0.5s ease-out;
+        -webkit-transition:all 0.5s ease-out;
+        -moz-transition:all 0.5s ease-out;
+        -ms-transition:all 0.5s ease-out;
+        -o-transition:all 0.5s ease-out;
+         transition:all 0.5s ease-out;
 }
 
 .rotate:hover {
-  -webkit-transform:rotate(360deg);
-  -moz-transform:rotate(360deg);
-  -ms-transform:rotate(360deg);
-  -o-transform:rotate(360deg);
-  transform:rotate(360deg);
+        -webkit-transform:rotate(360deg);
+        -moz-transform:rotate(360deg);
+        -ms-transform:rotate(360deg);
+        -o-transform:rotate(360deg);
+        transform:rotate(360deg);
 }
 
 #cursor{
@@ -65,8 +65,8 @@ html {
 
 
 #img {
-	margin-left: 40px;
-	margin-right: 45px;
+	margin-left: 30px;
+	margin-right: 35px;
 }
 
 h2 {
